--- a/source/Views/SuccessStorySettingsView.xaml
+++ b/source/Views/SuccessStorySettingsView.xaml
@@ -1571,6 +1571,34 @@
                     </ListBox.ItemTemplate>
                 </ListBox>
             </TabItem>
+
+            <TabItem Header="QuickSearch">
+                <ScrollViewer Margin="0,10,0,0">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="auto" />
+                            <RowDefinition Height="10" />
+                            <RowDefinition Height="auto" />
+                            <RowDefinition Height="10" />
+                            <RowDefinition Height="auto" />
+                            <RowDefinition Height="10" />
+                            <RowDefinition Height="auto" />
+                            <RowDefinition Height="10" />
+                            <RowDefinition Height="auto" />
+                        </Grid.RowDefinitions>
+
+                        <Label Grid.Row="0" Content="{DynamicResource LOCSsQuickSearchInfo}" />
+
+                        <Label Grid.Row="2" Margin="30,0,0,0" Content="time" FontWeight="Bold" />
+                        <Label Grid.Row="2" Margin="100,0,0,0" Content="{DynamicResource LOCSsQuickSearchCmd1}" />
+                        <Image Grid.Row="4" Margin="100,0,0,0" Name="PART_Time" HorizontalAlignment="Right" />
+
+                        <Label Grid.Row="6" Margin="30,0,0,0" Content="percent" FontWeight="Bold" />
+                        <Label Grid.Row="6" Margin="100,0,0,0" Content="{DynamicResource LOCSsQuickSearchCmd2}" />
+                        <Image Grid.Row="8" Margin="100,0,0,0" Name="PART_Percent" HorizontalAlignment="Right" />
+                    </Grid>
+                </ScrollViewer>
+            </TabItem>
         </TabControl>
     </Grid>
 </UserControl>
