--- a/source/Views/SuccessStoryCategoryView.xaml
+++ b/source/Views/SuccessStoryCategoryView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="SuccessStory.Views.SuccessStoryGenshinImpactView"
+﻿<UserControl x:Class="SuccessStory.Views.SuccessStoryCategoryView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -129,9 +129,11 @@
             </ListBox>
         </Grid>
         
-        <Grid Name="PART_Achievements_List_Contener" Grid.Column="2" Grid.Row="2" Grid.RowSpan="3">
+        <Grid Name="PART_Achievements_List_Contener" Grid.Column="2" Grid.Row="2" Grid.RowSpan="3"
+              Tag="{Binding RelativeSource={RelativeSource AncestorType=UserControl}, Path=DataContext.GameContext}">
             <controls:PluginList IgnoreSettings="True" ForceOneCol="True" DisplayFilter="True"
-                                 GameContext="{Binding RelativeSource={RelativeSource AncestorType=UserControl}, Path=DataContext.GameContext}" 
+                                 UsedCategory="True"
+                                 GameContext="{Binding ElementName=PART_Achievements_List_Contener, Path=Tag}" 
                                  Height="{Binding ElementName=PART_Achievements_List_Contener, Path=ActualHeight}" />
         </Grid>
 
