--- a/source/Controls/PluginList.xaml
+++ b/source/Controls/PluginList.xaml
@@ -11,8 +11,9 @@
         xmlns:convertersshared="clr-namespace:CommonPluginsShared.Converters"
         xmlns:sys="clr-namespace:System;assembly=mscorlib"
         xmlns:converters1="clr-namespace:SuccessStory.Converters"
-        xmlns:customs="clr-namespace:SuccessStory.Controls.Customs" xmlns:controls1="clr-namespace:CommonPluginsControls.Controls"
-    mc:Ignorable="d" d:DesignHeight="300" d:DesignWidth="150"
+        xmlns:controls1="clr-namespace:CommonPluginsControls.Controls"
+        xmlns:customs="clr-namespace:SuccessStory.Controls.Customs" 
+        mc:Ignorable="d" d:DesignHeight="300" d:DesignWidth="150"
         d:DataContext="{d:DesignInstance Type=local:PluginListDataContext, IsDesignTimeCreatable=True}"
         MinHeight="{Binding RelativeSource={RelativeSource AncestorType=ContentControl}, Path=MinHeight}"
         Height="{Binding Height}"
