--- a/source/Views/SuccessStoryOneGameView.xaml
+++ b/source/Views/SuccessStoryOneGameView.xaml
@@ -208,7 +208,7 @@
                 </Grid.ColumnDefinitions>
 
                 <Label Content="{DynamicResource LOCSourceLabel}" Grid.Column="0" FontSize="8" />
-                <TextBlock Grid.Column="2" VerticalAlignment="Center" FontSize="8">
+                <TextBlock Grid.Column="2" VerticalAlignment="Center" FontSize="8" Name="PART_Link">
                     <Hyperlink Name="PART_SourceLink" Click="PART_SourceLink_Click">
                         <TextBlock Name="PART_SourceLabel" FontSize="8" Text="a test source" />
                     </Hyperlink>
